--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
